--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,18 @@
 <resources>
     <string name="app_name">Sudoku Solver</string>
     <string name="clear">Clear</string>
+    <string name="confirmation_rate_app">If you enjoy using %1$s, please take a moment to rate it. Thanks for the support!</string>
+    <string name="dont_ask_again">Don\'t ask again</string>
     <string name="empty_sudoku">The sudoku can\'t be empty!</string>
     <string name="reset">Reset</string>
+    <string name="share">Share</string>
+    <string name="share_message">Go check out this amazing app! %1$s: %2$s </string>
+    <string name="rate">Rate</string>
+    <string name="rate_app">Rate the app</string>
+    <string name="remind_me_later">Remind me later</string>
     <string name="solve">Solve</string>
     <string name="solver_stopped">Solver stopped</string>
     <string name="stop">Stop</string>
     <string name="unsolvable_sudoku">This sudoku is unsolvable!</string>
+    <string name="yes">Yes</string>
 </resources>
