--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,9 +6,9 @@
     <string name="empty_sudoku">The sudoku can\'t be empty!</string>
     <string name="reset">Reset</string>
     <string name="share">Share</string>
-    <string name="share_message">Go check out this amazing app! %1$s: %2$s </string>
+    <string name="share_message">Go check out this amazing application! %1$s: %2$s </string>
     <string name="rate">Rate</string>
-    <string name="rate_app">Rate the app</string>
+    <string name="rate_app">Rate the application</string>
     <string name="remind_me_later">Remind me later</string>
     <string name="solve">Solve</string>
     <string name="stop">Stop</string>
